feat(init): init

--- a/src/design/ant/btn.less
+++ b/src/design/ant/btn.less
@@ -17,7 +17,7 @@
     }
   }
 
-  &-primary:not(&-background-ghost):not([disabled]) {
+  &-primary:enabled:not(&-background-ghost) {
     color: @white;
   }
 
