--- a/src/design/ant/index.less
+++ b/src/design/ant/index.less
@@ -1,6 +1,7 @@
-@import './pagination.less';
-@import './input.less';
-@import './btn.less';
+
+@import (reference) './pagination.less';
+@import (reference) './input.less';
+@import (reference) './btn.less';
 
 .ant-image-preview-root {
   img {
