--- a/src/design/transition/index.less
+++ b/src/design/transition/index.less
@@ -1,9 +1,9 @@
-@import './base.less';
-@import './fade.less';
-@import './scale.less';
-@import './slide.less';
-@import './scroll.less';
-@import './zoom.less';
+@import (reference) './base.less';
+@import (reference) './fade.less';
+@import (reference) './scale.less';
+@import (reference) './slide.less';
+@import (reference) './scroll.less';
+@import (reference) './zoom.less';
 
 .collapse-transition {
   transition: 0.2s height ease-in-out, 0.2s padding-top ease-in-out, 0.2s padding-bottom ease-in-out;
