--- a/src/design/var/index.less
+++ b/src/design/var/index.less
@@ -1,6 +1,6 @@
 @import (reference) '../color.less';
-@import 'easing';
-@import 'breakpoint';
+@import (reference) 'easing.less';
+@import (reference) 'breakpoint.less';
 
 @namespace: vben;
 
